test/vm/errors/parser/selective_import_empty.ach
// Parser error: empty selective import list
// Expected: parse error "empty import list"

import { } from "../../modules/utils.ach"
